# opengl

./: CMakeLists.txt  README.md
include/glad/: glad.h
libs/Lib/: glfw3.lib
src/: glad.c  main.cpp  press0.cpp  shiftingTri.cpp
